# learnme

./: .gitignore  .npmignore  .npmrc  CONTRIBUTING.md  LICENSE  MONGODB_TO_SQLITE_MIGRATION.md  NPX_README.md  PUBLISHING.md  README.md  REQUIREMENTS.md  install-learnme.ps1  nodejs_api_requirements.md  package-lock.json  package.json  python_api_requirements.md  speckit.constitution
python-backend/: .gitignore  INTEGRATION_STATUS.md  README.md  main.py  pyproject.toml
python-backend/app/api/content/: __init__.py  routes.py
python-backend/app/api/quiz/: __init__.py  routes.py
python-backend/app/config/: settings.py
python-backend/app/core/: __init__.py  app.py  gemini_client.py
python-backend/app/middleware/: ai_config.py
python-backend/app/models/: schemas.py
python-backend/app/services/ai/: AGENTS_DESIGN.md  CONTENT_EXTRACTION_AGENT.md  QUIZ_ANALYSIS_AGENT.md  QUIZ_GENERATION_AGENT.md  TOPIC_ORGANIZATION_AGENT.md  URL_EXTRACTION_TOOL.md  ai_client.py
python-backend/app/services/browser/: __init__.py  browser_service.py
python-backend/app/utils/: error_handler.py
python-service/: .gitignore  IMPLEMENTATION_COMPARISON.md  IMPLEMENTATION_NOTES.md  Makefile  QUICKSTART.md  README.md  UPDATE_DEPENDENCIES.md  VERSIONS.md  pyproject.toml  run.py
python-service/app/: __init__.py  main.py
python-service/app/agents/: base_agent.py  content_extraction_agent.py  orchestrator_agent.py  quiz_analysis_agent.py  quiz_generation_agent.py  quiz_instructions.py
python-service/app/config/: database.py  settings.py
python-service/app/services/: book_service.py
(+202 files in other folders)
